<resources>
    <string name="app_name">marcinko-FuelTrack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_log">AddLogActivity</string>
    <string name="title_activity_log">LogActivity</string>

    <string name="title_label">Fuel Log</string>
    <string name="Enter_title">Enter Fill Up Information
    </string>
    <string name="date_title">Date (yyyy-mm-dd): </string>
    <string name="station_title">Station (e.g. Costco, Esso): </string>
    <string name="odometer_title">Odometer Reading (in Km, numeric to 1 decimal place): </string>
    <string name="fuel_grade_title">Fuel Grade (e.g. regular):  </string>
    <string name="fuel_amount_title">Fuel Amount (in L, numeric to 3 decimal places): </string>
    <string name="unit_cost_title">Fuel Unit Cost (in cents per L, numeric to 1 decimal place): </string>
    <string name="save_log_button">Save Log</string>
    <string name="total_cost_header">Total Cost: </string>
    <string name="save_button_label">Save Log</string>
    <string name="cancel_log_button">Cancel</string>
    <string name="home_button">Home</string>


</resources>
